--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "request": "^2.88.2"
   },
   "devDependencies": {
