git bug trace revamp + using axios to make requests + error template change + async function and promise ustilization + upgraded packages - removed ts to pure js (packages conflicts) - removed request (package was depricated)

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "author": "Mfuon Leonard",
   "dependencies": {
-    "@types/node": "^14.0.13",
+    "@types/node": "^14.11.2",
+    "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "request": "^2.88.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
