--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
